--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -19,7 +19,10 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
+    <%= render 'layouts/header' %>
+
     <div class="container">
+
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
