--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,9 +7,11 @@
     <div class='user-text-info'>
       <div class="username">
         <h3><%= link_to user.name, user %></h3>
-        <% if current_user.admin? && !current_user?(user) %>
-          <%= link_to user, method: :delete, data: { confirm: "Are you sure you want to delete this??" } do %>
-            <i class="fa-solid fa-trash-can"></i>
+        <% if logged_in? %>
+          <% if current_user.admin? && !current_user?(user) %>
+            <%= link_to user, method: :delete, data: { confirm: "Are you sure you want to delete this??" } do %>
+              <i class="fa-solid fa-trash-can"></i>
+            <% end %>
           <% end %>
         <% end %>
       </div>
