--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -42,6 +42,13 @@
     <%= f.label :website %>
     <%= f.text_field :website, placeholder: "255文字以内", class: 'form-control' %>
 
+    <div class="checkbox-wrap" style="padding: 12px 0 6px; margin: 0;">
+      <%= f.label :private do %>
+        <span>Private account</span>
+        <%= f.check_box :private %>
+      <% end %>
+    </div>
+
     <div class="line-checkbox-wrap">
       <%= f.label :line_connection_delete do %>
         <% if current_user.lineuid %>
